# tesseract-ocr-ros2

./: README.md
tesseract-ocr-ros2/: CMakeLists.txt  package.xml
tesseract-ocr-ros2/include/tesseract-ocr-ros2/: tesseract_ocr_node.hpp
tesseract-ocr-ros2/src/: tesseract_ocr_node.cpp
